# jacinta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: Jacinta.md
docs/jacinta/evaluator/: Evaluator.md  ZScoreEvaluator.md
docs/jacinta/receiver/: Receiver.md  ReceiverSample.md
docs/jacinta/transmitter/: Transmitter.md  TransmitterSample.md
docs/jacinta/utils/ndspace/: NDPoint.md  NDSpace.md
docs/jacinta/utils/scheduler/: ConstantScheduler.md  ExponentialScheduler.md  LinearScheduler.md  LogarithmicScheduler.md  PiecewiseScheduler.md  PolynomialScheduler.md  PowerScheduler.md  Scheduler.md
docs/nodes/: Cell.md  Processor.md  Receiver.md  Transmitter.md
eval/nodes/: Receiver.ipynb
evals/nodes/: Receiver.ipynb  Transmitter.ipynb
playground/transmitter/: Transmitter.ipynb
scripts/: pep-check.sh  pep-fix.sh
src/jacinta/: Jacinta.py  __init__.py
src/jacinta/evaluator/: Evaluator.py  ZScoreEvaluator.py  __init__.py
src/jacinta/nodes/: Cell.py  Processor.py  Receiver.py  Transmitter.py  __init__.py
src/jacinta/receiver/: Receiver.py  ReceiverSample.py  __init__.py
src/jacinta/transmitter/: DeprecatedTransmitter.py  README.md  Transmitter.py  TransmitterNode.py  TransmitterSample.py  TransmitterScheduleStrategy.py  TransmitterScheduler.py  TransmitterTree.py  __init__.py
src/jacinta/utils/: Logger.py  __init__.py
src/jacinta/utils/ndspace/: NDPoint.py  NDSpace.py  NDTree.py  __init__.py
src/jacinta/utils/scheduler/: ConstantScheduleStrategy.py  ConstantScheduler.py  ExponentialScheduleStrategy.py  ExponentialScheduler.py  LinearScheduleStrategy.py  LinearScheduler.py  LogarithmicScheduleStrategy.py  LogarithmicScheduler.py  PiecewiseScheduleStrategy.py  PiecewiseScheduler.py  PolynomialScheduleStrategy.py  __init__.py  (+5 more)
